# chcode

./: .gitignore  README.md  README_zh.md  pyproject.toml
.github/workflows/: test.yml
chcode/: agent_setup.py  chat.py  cli.py  config.py  display.py  prompts.py  session.py  skill_manager.py  vision_config.py
chcode/agents/: __init__.py  definitions.py  loader.py  runner.py
chcode/utils/: enhanced_chat_openai.py  git_manager.py  modelscope_ratelimit.py  multimodal.py  skill_loader.py  tools.py
chcode/utils/shell/: __init__.py  output.py  provider.py  result.py  semantics.py  session.py
docs/plans/: 2026-04-23-vision-tool.md
tests/: conftest.py  test_agent_setup.py  test_agent_setup_extended.py  test_chat_helpers.py  test_chat_repl.py  test_chat_repl_extended.py  test_cli.py  test_cli_extended.py  test_config.py  test_config_extended.py  test_config_pure.py  test_coverage_gaps.py  test_definitions.py  test_display.py  test_display_extended.py  test_enhanced_chat_openai.py  test_enhanced_chat_openai_extended.py  test_git_checker.py  test_git_manager.py  test_git_manager_extended.py  test_loader.py  test_multimodal.py  test_output.py  test_prompt_toolkit_ui.py  test_prompts.py  test_provider.py  test_result.py  test_runner.py  test_runner_extended.py  test_semantics.py  test_session.py  test_shell_session.py  test_shell_session_extended.py  test_skill_loader.py  test_skill_loader_extended.py  test_skill_manager_extended.py  test_tool_result_pipeline.py  test_tools.py  test_tools_extended.py  test_vision.py  (+1 more)
